Data and code update

--- a/entity/data/variations/variations-kn.yaml
+++ b/entity/data/variations/variations-kn.yaml
@@ -1,24 +1,24 @@
 bank_name:
   A P Mahesh Co-operative Urban Bank Ltd:
-  - ಆಂಧ್ರ ಪ್ರದೇಶ ಮಹೇಶ್ ಕೋಆಪರೇಟಿವ್ ಅರ್ಬನ್ ಬಂಕ್ ಲಿಮಿಟೆಡ್
-  - ಆಂಧ್ರ ಪ್ರದೇಶ ಮಹೇಶ್ ಕೋಆಪರೇಟಿವ್ ಅರ್ಬನ್ ಬಂಕ್
-  - ಆಂಧ್ರ ಪ್ರದೇಶ ಮಹೇಶ್ ಕೋಆಪರೇಟಿವ್ ಬಂಕ್
-  - ಆಂಧ್ರ ಪ್ರದೇಶ ಮಹೇಶ್ ಬಂಕ್
-  - ಅಪ್ ಮಹೇಶ್ ಕೋಆಪರೇಟಿವ್ ಅರ್ಬನ್ ಬಂಕ್ ಲಿಮಿಟೆಡ್
-  - ಅಪ್ ಮಹೇಶ್ ಕೋಆಪರೇಟಿವ್ ಅರ್ಬನ್ ಬಂಕ್
-  - ಅಪ್ ಮಹೇಶ್ ಕೋಆಪರೇಟಿವ್ ಬಂಕ್
-  - ಅಪ್ ಮಹೇಶ್ ಬಂಕ್
+  - ಆಂಧ್ರ ಪ್ರದೇಶ ಮಹೇಶ್ ಕೋಆಪರೇಟಿವ್ ಅರ್ಬನ್ ಬ್ಯಾಂಕ್ ಲಿಮಿಟೆಡ್
+  - ಆಂಧ್ರ ಪ್ರದೇಶ ಮಹೇಶ್ ಕೋಆಪರೇಟಿವ್ ಅರ್ಬನ್ ಬ್ಯಾಂಕ್ 
+  - ಆಂಧ್ರ ಪ್ರದೇಶ ಮಹೇಶ್ ಕೋಆಪರೇಟಿವ್ ಬ್ಯಾಂಕ್ 
+  - ಆಂಧ್ರ ಪ್ರದೇಶ ಮಹೇಶ್ ಬ್ಯಾಂಕ್
+  - ಎಪಿ ಮಹೇಶ್ ಕೋಆಪರೇಟಿವ್ ಅರ್ಬನ್ ಬ್ಯಾಂಕ್ ಲಿಮಿಟೆಡ್
+  - ಎಪಿ ಮಹೇಶ್ ಕೋಆಪರೇಟಿವ್ ಅರ್ಬನ್ ಬ್ಯಾಂಕ್ 
+  - ಎಪಿ ಮಹೇಶ್ ಕೋಆಪರೇಟಿವ್ ಬ್ಯಾಂಕ್
+  - ಎಪಿ ಮಹೇಶ್ ಬ್ಯಾಂಕ್ 
   AMAN SAHAKARI BANK LTD.,ICHALKARANJI:
   - ಅಮನ್ ಸಹಕಾರಿ ಬಂಕ್ ಎಲ್ಟಿಡಿ.,ಇಚಲಕರಂಜಿ
   ARUNACHAL PRADESH RURAL BANK:
-  - ಅರುಣಾಚಲ್ ಪ್ರದೇಶ ರೂರಲ್ ಬಂಕ್
-  - ಅರುಣಾಚಲ್ ಪ್ರದೇಶ ಬಂಕ್
-  - ಅರುಣಾಚಲ್ ಬಂಕ್
+  - ಅರುಣಾಚಲ್ ಪ್ರದೇಶ ರೂರಲ್ ಬ್ಯಾಂಕ್
+  - ಅರುಣಾಚಲ ಪ್ರದೇಶ ರೂರಲ್ ಬ್ಯಾಂಕು
+  - ಅರುಣಾಚಲ ಬ್ಯಾಂಕು
   AU Small Finance Bank:
-  - ಎಯು ಸ್ಮಾಲ್ ಫೈನಾನ್ಸ್ ಬಂಕ್
-  - ಎಯು ಬಂಕ್
-  - ಎಯು ಫೈನಾನ್ಸ್ ಬಂಕ್
-  - ಎಯು ಸ್ಮಾಲ್ ಬಂಕ್
+  - ಎಯು ಸ್ಮಾಲ್ ಫೈನಾನ್ಸ್ ಬ್ಯಾಂಕ್
+  - ಯೇಯೂ ಸ್ಮಾಲ್ ಫಿನಾನ್ಸ್ ಬ್ಯಾಂಕ್
+  - ಏಯೂ ಸ್ಮಾಲ್ ಫೈನಾನ್ಸ್ ಬ್ಯಾಂಕು
+  - ಎಯು ಸ್ಮಾಲ್ ಬ್ಯಾಂಕ್
   Abhyudaya Co-op Bank Ltd:
   - ಅಭ್ಯುದಯ ಕೋಆಪರೇಟಿವ್ ಬಂಕ್ ಲಿಮಿಟೆಡ್
   - ಅಭ್ಯುದಯ ಕೋಆಪರೇಟಿವ್ ಬಂಕ್
@@ -26,11 +26,24 @@ bank_name:
   - ಅಭ್ಯುದಯ ಕೂಪ್ ಬಂಕ್ ಲಿಮಿಟೆಡ್
   - ಅಭ್ಯುದಯ ಕೂಪ್ ಬಂಕ್
   - ಅಭ್ಯುದಯ ಕೂಪ್
+  - ಅಭ್ಯುದಯ ಸಹಕಾರಿ ಬ್ಯಾಂಕ್ ಲಿಮಿಟೆಡ್
+  - ಅಭ್ಯುದಯ ಸಹಕಾರಿ ಬ್ಯಾಂಕ್
+  - ಅಭ್ಯುದಯ ಸಹಕಾರಿ
+  - ಅಭ್ಯುದಯ ಕೋಪ್ ಬ್ಯಾಂಕ್ ಲಿಮಿಟೆಡ್
+  - ಅಭ್ಯುದಯ ಕೋಪ್ ಬ್ಯಾಂಕ್
+  - ಅಭ್ಯುದಯ ಕೋಪ್ 
   Adarsh Cooperative Bank Ltd:
   - ಆದರ್ಶ್ ಕೋಆಪರೇಟಿವ್ ಬಂಕ್ ಲಿಮಿಟೆಡ್
   - ಆದರ್ಶ್ ಕೋಆಪರೇಟಿವ್ ಬಂಕ್
   - ಆದರ್ಶ್ ಕೋಆಪರೇಟಿವ್
   - ಆದರ್ಶ್ ಬಂಕ್
+  - ಆದರ್ಶ ಸಹಕಾರಿ ಬ್ಯಾಂಕ್ ಲಿಮಿಟೆಡ್s
+  - ಆದರ್ಶ ಸಹಕಾರಿ ಬ್ಯಾಂಕ್
+  - ಆದರ್ಶ ಸಹಕಾರಿ
+  - ಆದರ್ಶ ಬ್ಯಾಂಕ್
+  - ಆದರ್ಶ ಸಹಕಾರಿ ಬ್ಯಾಂಕ್ ಲಿಮಿಟೆಡ್
+  - ಆದರ್ಶ ಸಹಕಾರಿ ಬ್ಯಾಂಕ್
+  - ಆದರ್ಶ ಸಹಕಾರಿ
   Adilabad District Coop Central Bank Ltd:
   - ಅದಿಲಾಬಾದ್ ಡಿಸ್ಟ್ರಿಕ್ಟ್ ಕೂಪ್ ಸೆಂಟ್ರಲ್ ಬಂಕ್ ಎಲ್ಟಿಡಿ
   Ahmednagar Shahar Sahakari Bank Ltd:
@@ -40,12 +53,21 @@ bank_name:
   - ಅಹ್ಮದ್ನಗರ ಶಹರ್ ಸಹಕಾರಿ ಬಂಕ್ ಲಿಮಿಟೆಡ್
   - ಅಹ್ಮದ್ನಗರ ಶಹರ್ ಸಹಕಾರಿ ಬಂಕ್
   - ಅಹ್ಮದ್ನಗರ ಶಹರ್ ಬಂಕ್
+  - ಅಹ್ಮದ್ ನಗರ್ ಶಹರ್ ಸಹಕಾರಿ ಬ್ಯಾಂಕ್ ಲಿಮಿಟೆಡ್
+  - ಅಹ್ಮದ್ ನಗರ್ ಶಹರ್ ಸಹಕಾರಿ ಬ್ಯಾಂಕ್
+  - ಅಹ್ಮದ್ ನಗರ್ ಶಹರ್  ಬ್ಯಾಂಕ್
+  - ಅಹ್ಮದ್ ನಗರ್ ಶಹರ್  ಬ್ಯಾಂಕ್
+  - ಅಹ್ಮದ್ ನಗರ್ ಶಹರ್  ಬ್ಯಾಂಕ್ 
   Airtel Payments Bank:
-  - ಏರ್ಟೆಲ್ ಪೇಮೆಂಟ್ಸ್ ಬಂಕ್
+  - ಏರ್ ಟೆಲ್ ಪೇಮೆಂಟ್ ಬ್ಯಾಂಕ್
   - ಏರ್ಟೆಲ್ ಬಂಕ್
-  - ಏರ್ಟೆಲ್ ಪೇಮೆಂಟ್ ಬಂಕ್
-  - ಎಪಿಬಿ ಬಂಕ್
-  - ಎಪಿಬಿ
+  - ಏರ್ ಟೆಲ್ ಪೇಮೆಂಟ್ ಬ್ಯಾಂಕ್
+  - ಎಪಿಬಿ ಬ್ಯಾಂಕ್
+  - ಎಪಿಬಿ 
+  - ಏರ್ ಟೆಲ್ ಪೇಮೆಂಟ್ ಬ್ಯಾಂಕ್
+  - ಏರ್ ಟೆಲ್ ಬ್ಯಾಂಕ್
+  - ಎಪಿಬಿ ಬ್ಯಾಂಕ್
+  - ಎಪಿಬಿ 
   Ajanta Urban Co-Op Bank ltd:
   - ಅಜಂತ ಅರ್ಬನ್ ಕೋಆಪರೇಟಿವ್ ಬಂಕ್ ಲಿಮಿಟೆಡ್
   - ಅಜಂತ ಅರ್ಬನ್ ಕೋಆಪರೇಟಿವ್ ಬಂಕ್
@@ -53,12 +75,23 @@ bank_name:
   - ಅಜಂತ ಕೋಆಪರೇಟಿವ್ ಬಂಕ್
   - ಅಜಂತ ಅರ್ಬನ್ ಬಂಕ್
   - ಅಜಂತ ಅರ್ಬನ್
+  - ಅಜಂತಾ ಅರ್ಬನ್ ಕೋಆಪರೇಟಿವ್ ಬ್ಯಾಂಕ್ ಲಿಮಿಟೆಡ್
+  - ಅಜಂತಾ ಅರ್ಬನ್ ಕೋಆಪರೇಟಿವ್ ಬ್ಯಾಂಕ್ 
+  - ಅಜಂತಾ ಅರ್ಬನ್ ಕೋಆಪರೇಟಿವ್ 
+  - ಅಜಂತಾ ಕೋಆಪರೇಟಿವ್ ಬ್ಯಾಂಕ್
+  - ಅಜಂತಾ ಅರ್ಬನ್  ಬ್ಯಾಂಕ್
+  - ಅಜಂತಾ ಅರ್ಬನ್ 
   Akhand Anand Co.op Bank Ltd:
   - ಅಖಂಡ್ ಆನಂದ್ ಕೋಆಪರೇಟಿವ್ ಬಂಕ್ ಲಿಮಿಟೆಡ್
   - ಅಖಂಡ್ ಆನಂದ್ ಕೋಆಪರೇಟಿವ್ ಬಂಕ್
   - ಅಖಂಡ್ ಆನಂದ್ ಕೋಆಪರೇಟಿವ್
   - ಅಖಂಡ್ ಆನಂದ್ ಬಂಕ್
   - ಅಖಂಡ್ ಆನಂದ್
+  - ಅಖಂಡ ಆನಂದ್ ಸಹಕಾರಿ ಬ್ಯಾಂಕ್ ಲಿಮಿಟೆಡ್
+  - ಅಖಂಡ ಆನಂದ್ ಸಹಕಾರಿ ಬ್ಯಾಂಕ್
+  - ಅಖಂಡ ಆನಂದ್ ಸಹಕಾರಿ 
+  - ಅಖಂಡ ಆನಂದ್ ಬ್ಯಾಂಕ್
+  - ಅಖಂಡ ಆನಂದ್
   Akola Janata Commercial Co-Operative Bank:
   - ಅಕೋಲಾ ಜನತಾ ಕಮರ್ಷಿಯಲ್ ಕೋಆಪರೇಟಿವ್ ಬಂಕ್ ಲಿಮಿಟೆಡ್
   - ಅಕೋಲಾ ಜನತಾ ಕಮರ್ಷಿಯಲ್ ಕೋಆಪರೇಟಿವ್ ಬಂಕ್
@@ -76,178 +109,183 @@ bank_name:
   - ಅಕೋಲಾ ಜಂತ ಕಮರ್ಷಿಯಲ್
   - ಅಕೋಲಾ ಜಂತ ಕೋಆಪರೇಟಿವ್
   - ಅಕೋಲಾ ಜಂತ ಬಂಕ್
+  - ಅಕೋಲಾ ಜನತಾ ಕಮರ್ಷಿಯಲ್ ಕೋಆಪರೇಟಿವ್ ಕ್ ಲಿಮಿಟೆಡ್
+  - ಅಕಾಲಾ ಜನತಾ ಕಮರ್ಷಿಯಲ್ ಕೋಆಪರೇಟಿವ್ ಬ್ಯಾಂಕ್
+  - ಅಕ್ಕೋಲಾ ಜನತಾ ಕಮರ್ಷಿಯಲ್ ಬೇಂಕು
   Alavi Cooperative Bank Ltd:
   - ಅಳವಿ ಕೋಆಪರೇಟಿವ್ ಬಂಕ್ ಎಲ್ಟಿಡಿ
   Amazon Pay (India) Private Limited:
-  - ಅಮೆಜಾನ್ ಪೇ ಪ್ರೈವೇಟ್ ಲಿಮಿಟೆಡ್
-  - ಅಮೆಜಾನ್ ಪೇ
-  - ಅಮೆಜಾನ್ ಪಿಪಿಐ
-  - ಅಮೆಜಾನ್
+  - ಆಮಜಾನ್‌ ಪೇ ಪ್ರಿವೇಟ್‌ ಲಿಮಿಟೆಡ್ಡು
+  - ಏಮಜಾನ್‌ ಪೇ
+  - ಆಮಜಾ಼ನ್‌ ಪ್ಪಿ
+  - ಯಾಮಜಾ಼ನ್
   Ambajogai Peoples Co-operative Bank Limited:
-  - ಅಂಬಾಜೋಗೈ ಪಿಯೋಪಲ್ಸ್ ಕೋಆಪರೇಟಿವ್ ಬಂಕ್ ಲಿಮಿಟೆಡ್
-  - ಅಂಬಾಜೋಗೈ ಪಿಯೋಪಲ್ಸ್ ಕೋಆಪರೇಟಿವ್ ಬಂಕ್
-  - ಅಂಬಾಜೋಗೈ ಪಿಯೋಪಲ್ಸ್ ಬಂಕ್
-  - ಅಂಬಾಜೋಗೈ ಕೋಆಪರೇಟಿವ್ ಬಂಕ್
-  - ಅಂಬಾಜೋಗೈ ಪಿಯೋಪಲ್ಸ್ ಕೋಆಪರೇಟಿವ್
-  - ಅಂಬಾಜೊ ಗೈ ಪಿಯೋಪಲ್ಸ್ ಕೋಆಪರೇಟಿವ್ ಬಂಕ್ ಲಿಮಿಟೆಡ್
-  - ಅಂಬಾಜೊ ಗೈ ಪಿಯೋಪಲ್ಸ್ ಕೋಆಪರೇಟಿವ್ ಬಂಕ್
-  - ಅಂಬಾಜೊ ಗೈ ಪಿಯೋಪಲ್ಸ್ ಬಂಕ್
-  - ಅಂಬಾಜೊ ಗೈ ಕೋಆಪರೇಟಿವ್ ಬಂಕ್
-  - ಅಂಬಾಜೊ ಗೈ ಪಿಯೋಪಲ್ಸ್ ಕೋಆಪರೇಟಿವ್
+  - ಅಂಬಾಜೋಗೈ ಪೀಪಲ್ಸ್‌ ಕೋಆಪರೇಟಿವ್‌ ಬ್ಯಾಂಕ್‌ ಲಿಮಿಟೆಡ್
+  - ಅಂಬಾಜೋಗೈ ಪೀಪಲ್ಸ್‌ ಕೋಆಪರೇಟಿವ್‌ ಬ್ಯಾಂಕ್‌
+  - ಅಂಬಾಜೋಗೈ ಪೀಪಲ್ಸ್‌ ಬ್ಯಾಂಕ್‌
+  - ಅಂಬಾಜೋಗೈ ಕಾಪರೇಟಿವ್‌ ಬ್ಯಾಂಕ್‌
+  - ಅಂಬಾಜೋಗೈ ಪೀಪಲ್ಸ್‌ ಕೋಆಪರೇಟಿವ್‌
+  - ಅಂಬಾಜೋ಼ ಗಾಯ್ ಪೀಪಲ್ಸ್‌ ಕೋಆಪರೇಟಿವ್‌ ಬ್ಯಾಂಕ್‌ ಲಿಮಿಟೆಡ್
+  - ಅಂಬಾಜೋ಼ ಗಾಯ್ ಪೀಪಲ್ಸ್‌ ಕೋಪರೇಟಿವ್‌ ಬ್ಯಾಂಕು
+  - ಅಂಬಾಜೋ಼ ಗಾಯ್ ಪೀಪಲ್ಸ್‌ ಬಾಂಕಿ
+  - ಅಂಬಾಜೋ಼ ಗಾಯ್ ಕಾಪರೇಟಿವ್‌ ಬಾಂಕು
+  - ಅಂಬಾಜೋ಼ ಗಾಯ್ ಪೀಪಲ್ಸ್‌ ಕಾಪರೇಟಿವ್ವು
   Ambarnath Jai Hind Cooperative Bank Ltd.:
-  - ಅಂಬರನಾಥ ಜೈ ಹಿಂದ್ ಕೋಆಪರೇಟಿವ್ ಬಂಕ್ ಲಿಮಿಟೆಡ್
-  - ಅಂಬರನಾಥ ಜೈ ಹಿಂದ್ ಕೋಆಪರೇಟಿವ್ ಬಂಕ್
-  - ಅಂಬರನಾಥ ಜೈ ಹಿಂದ್ ಬಂಕ್
-  - ಅಂಬರನಾಥ ಬಂಕ್
+  - ಅಂಬರ್ನಾಥ್‌ ಜೈ ಹಿಂದ್‌ ಕೋಆಪರೇಟಿವ್‌ ಬ್ಯಾಂಕ್‌ ಲಿಮಿಟೆಡ್
+  - ಅಂಬರ್ನಾಥ್‌ ಜೈ ಇಂದ್‌ ಕಾಪರೇಟಿವ್‌ ಬ್ಯಾಂಕು
+  - ಅಂಬರ ನಾಥ ಜೈ ಯಿಂದ್‌ ಕೋಪರೇಟಿವ್‌ ಬ್ಯಾಂಕ್‌ ಲಿಮಿಟೆಡ್
+  - ಹಂಬರ ನಾತ ಬ್ಯಾಂಕು
   Amreli Jilla Madhyastha Sahakari Bank Ltd:
-  - ಅಮ್ರೇಲಿ ಜಿಲ್ಲಾ ಮಧ್ಯಸ್ಥ ಸಹಕಾರಿ ಬಂಕ್ ಲಿಮಿಟೆಡ್
-  - ಅಮ್ರೇಲಿ ಜಿಲ್ಲಾ ಮಧ್ಯಸ್ಥ ಸಹಕಾರಿ ಬಂಕ್
-  - ಅಮ್ರೇಲಿ ಜಿಲ್ಲಾ ಬಂಕ್
-  - ಅಮ್ರೇಲಿ ಸಹಕಾರಿ ಬಂಕ್
-  - ಅಮ್ರೇಲಿ ಜಿಲ್ಲಾ ಸಹಕಾರಿ ಬಂಕ್
-  - ಅಮ್ರೇಲಿ ಜಿಲಾ ಮಧ್ಯಸ್ಥ ಸಹಕಾರಿ ಬಂಕ್ ಲಿಮಿಟೆಡ್
-  - ಅಮ್ರೇಲಿ ಜಿಲಾ ಮಧ್ಯಸ್ಥ ಸಹಕಾರಿ ಬಂಕ್
-  - ಅಮ್ರೇಲಿ ಜಿಲಾ ಸಹಕಾರಿ ಬಂಕ್
-  - ಅಮ್ರೇಲಿ ಜಿಲಾ ಮಧ್ಯಸ್ಥ ಬಂಕ್
+  - ಅಮ್ರೇಲೀ ಜಿಲ್ಲಾ ಮಧ್ಯಸ್ಥ ಸಹಕಾರಿ ಬ್ಯಾಂಕ್‌ ಲಿಮಿಟೆಡ್
+  - ಅಂಬ್ರೇಲಿ ಜಿಲ್ಲೆ ಮಧ್ಯಸ್ಥ ಸಹಕಾರಿ ಬ್ಯಾಂಕ್‌
+  - ಹಮ್ರೇಲೀ ಜಿ಼ಲ್ಲಾ ಬ್ಯಾಂಕು
+  - ಅಮ್ರೇಲೀ ಸಾಕಾರಿ ಬಾಂಕು
+  - ಅಂಬ್ರೇಲಿ ಜಿಲ್ಲೆ ಮದ್ಯಸ್ತ ಸಾಕಾರಿ ಬೇಂಕ್ ಲಿಮಿಟೆಡ್
+  - ಅಮ್ರೇಲೀ ಜಿಲ್ಲಾ ಮಧ್ಯಸ್ಥಾ ಸಾಕಾರೀ ಬಾಂಕ್ ಲಿಮಿಟೆಡ್ಡು
+  - ಅಮ್ರೇಲಿ ಜಿಲ್ಲೆ ಮಧ್ಯಸ್ತ ಸಹಕಾರೀ ಬ್ಯಾಂಕು
+  - ಅಮ್ರೇಲೀ ಜಿ಼ಲ್ಲಾ ಮದ್ಯಸ್ತಾ ಸಾಕಾರಿ ಬಾಂಕು
+  - ಅಮ್ರೇಲೀ ಜಿಲ್ಲಾ ಮಧ್ಯಸ್ಥ ಸಹಕಾರಿ ಬ್ಯಾಂಕ್‌
   Amreli Nagarik Sahakari Bank Ltd:
   - ಅಮ್ರೇಲಿ ನಾಗರಿಕ್ ಸಹಕಾರಿ ಬಂಕ್ ಎಲ್ಟಿಡಿ
   Andhra Pradesh State Cooperative Bank:
-  - ಆಂಧ್ರ ಪ್ರದೇಶ ಸ್ಟೇಟ್ ಕೋಆಪರೇಟಿವ್ ಬಂಕ್
-  - ಆಂಧ್ರ ಪ್ರದೇಶ ಸ್ಟೇಟ್ ಬಂಕ್
-  - ಆಂಧ್ರ ಪ್ರದೇಶ ಕೋಆಪರೇಟಿವ್
-  - ಆಂಧ್ರ ಪ್ರದೇಶ ಕೋಆಪರೇಟಿವ್ ಬಂಕ್
+  - ಆಂಧ್ರಪ್ರದೇಶ್‌ ಸ್ಟೇಟ್‌ ಕೋ ಆಪರೇಟಿವ್ ಬ್ಯಾಂಕ್
+  - ಆಂಧ್ರಪ್ರದೇಶ ಶ್ಟೇಟ್ ಕೋ ಆಪರೇಟಿವ್ ಬ್ಯಾಂಕು
+  - ಆಂದ್ರ ಪ್ರದೇಶಸ ಸ್ಟೇಟ್‌ ಕೋಪರೇಟಿವ್ ಬ್ಯಾಂಕು
+  - ಆಂಧ್ರಪ್ರದೇಶ ಕಾಪರೇಟಿವ್ ಬ್ಯಾಂಕ್
   Andhra Pragathi Gramina Bank:
-  - ಆಂಧ್ರ ಪ್ರಗತಿ ಗ್ರಾಮೀಣ ಬಂಕ್
-  - ಆಂಧ್ರ ಪ್ರಗತಿ ಗ್ರಾಮೀಣ
-  - ಆಂಧ್ರ ಪ್ರಗತಿ ಬಂಕ್
-  - ಆಂಧ್ರ ಪ್ರಗತಿ ಗ್ರಾಮೀಣ ಬಂಕ್
-  - ಆಂಧ್ರ ಪ್ರಗತಿ ಗ್ರಾಮೀಣ
-  - ಆಂಧ್ರ ಪ್ರಗತಿ ಬಂಕ್
-  - ಆಂಧ್ರ ಪ್ರಗತಿ ಗ್ರಾಮೀಣ ಬಂಕ್
-  - ಆಂಧ್ರ ಪ್ರಗತಿ ಗ್ರಾಮೀಣ
+  - ಆಂಧ್ರ ಪ್ರಗತಿ ಗ್ರಾಮೀಣ ಬ್ಯಾಂಕ್
+  - ಆಂದ್ರಾ ಪ್ರಗತಿ ಗ್ರಾಮೀಣಾ
+  - ಆಂಧ್ರ ಪ್ರಗತೀ ಬಾಂಕು
+  - ಆಂದ್ರ ಪ್ರಗತಿ ಗ್ರಾಮೀಣ ಬ್ಯಾಂಕು
+  - ಆಂದ್ರ ಪ್ರಗತಿ ಗ್ರಾಮೀಣ ಬೇಂಕು
+  - ಆಂದ್ರ ಪ್ರಗತೀ ಬ್ಯಾಂಕು
+  - ಆಂಧ್ರ ಪ್ರಗತಿ ಗ್ರಾಮೀಣ ಬ್ಯಾಂಕು
+  - ಅಂದ್ರ ಪ್ರಗತಿ ಗ್ರಾಮೀಣ್
   Andhra pradesh gramin Vikas Bank:
-  - ಆಂಧ್ರ ಪ್ರದೇಶ ಗ್ರಾಮೀಣ್ ವಿಕಾಸ್ ಬಂಕ್
-  - ಆಂಧ್ರ ಪ್ರದೇಶ ಗ್ರಾಮೀಣ್ ಬಂಕ್
-  - ಆಂಧ್ರ ಪ್ರದೇಶ ವಿಕಾಸ್ ಬಂಕ್
-  - ಆಂಧ್ರ ಪ್ರದೇಶ ಗ್ರಾಮೀಣ ವಿಕಾಸ್ ಬಂಕ್
-  - ಆಂಧ್ರ ಪ್ರದೇಶ ಗ್ರಾಮೀಣ ಬಂಕ್
-  - ಆಂಧ್ರ ಪ್ರದೇಶ ವಿಕಾಸ್ ಬಂಕ್
+  - ಆಂಧ್ರಪ್ರದೇಶ್‌ ಗ್ರಾಮೀಣ್‌ ವಿಕಾಸ್‌ ಬ್ಯಾಂಕ್
+  - ಆಂಧ್ರಪ್ರದೇಶ ಗ್ರಾಮೀಣ ವಿಕಾಸ ಬ್ಯಾಂಕು
+  - ಆಂದ್ರ ಪ್ರದೇದ ಗ್ರಾಮೀಣ ವಿಕಾಸ ಬಾಂಕು
+  - ಆಂಧ್ರಪ್ರದೇಶ್‌ ಗ್ರಾಮೀಣ್‌ ವಿಕಾಸ್‌ ಬ್ಯಾಂಕ್
+  - ಆಂಧ್ರಪ್ರದೇಶ್‌ ಗ್ರಾಮೀಣ ಬ್ಯಾಂಕು
+  - ಆಂಧ್ರಪ್ರದೇಶ ಗ್ರಾಮೀಣ್‌ ವಿಕಾಸ ಬೇಂಕು
   Apna Sahakari Bank Ltd:
-  - ಅಪ್ನಾ ಸಹಕಾರಿ ಬಂಕ್ ಲಿಮಿಟೆಡ್
-  - ಅಪ್ನಾ ಸಹಕಾರಿ ಬಂಕ್
-  - ಅಪ್ನಾ ಬಂಕ್
-  - ಅಪ್ನಾ ಸಹಕಾರಿ ಬಂಕ್ ಲಿಮಿಟೆಡ್
-  - ಅಪ್ನಾ ಸಹಕಾರಿ ಬಂಕ್
+  - ಅಪ್ನಾ ಸಹಕಾರಿ ಬ್ಯಾಂಕ್ ಲಿಮಿಟೆಡ್
+  - ಅಪ್ನ ಸಾಕಾರಿ ಬಾಂಕು
+  - ಅಪ್ನಾ ಬ್ಯಾಂಕು
+  - ಆಪ್ನ ಸಾಕಾರಿ ಬ್ಯಾಂಕು ಲಿಮಿಟೆಡ್ಡು
+  - ಅಪ್ನಾ ಸಹಕಾರಿ ಬೇಂಕು
   Appnit Technologies Pvt. Ltd.:
   - ಅಪ್ನಿಟ್ ಟೆಕ್ನಾಲಜೀಸ್ ಪಿವಿಟಿ. ಎಲ್ಟಿಡಿ.
   Arihant Urban Co-Operative Bank Ltd:
   - ಅರಿಹಂತ್ ಅರ್ಬನ್ ಸಿಒ-ಆಪರೇಟಿವ್ ಬಂಕ್ ಎಲ್ಟಿಡಿ
   Arvind Sahakari Bank Ltd:
-  - ಅರವಿಂದ್ ಸಹಕಾರಿ ಬಂಕ್ ಲಿಮಿಟೆಡ್
-  - ಅರವಿಂದ್ ಸಹಕಾರಿ ಬಂಕ್
-  - ಅರವಿಂದ್ ಬಂಕ್
-  - ಅರವಿಂದ್ ಸಹಕಾರಿ ಬಂಕ್ ಲಿಮಿಟೆಡ್
-  - ಅರವಿಂದ್ ಸಹಕಾರಿ ಬಂಕ್
+  - ಅರವಿಂದ್ ಸಹಕಾರಿ ಬ್ಯಾಂಕ್ ಲಿಮಿಟೆಡ್
+  - ಅರವಿಂದ ಸಾಕಾರಿ ಬ್ಯಾಂಕ್ ಲಿಮಿಟೆಡ್ಡು
+  - ಅರವಿಂದಾ ಬ್ಯಾಂಕು
+  - ಅರ್ವಿಂದಾ ಸಾಕಾರಿ ಬಾಂಕ್ ಲಿಮಿಟೆಡ್ಡು
+  - ಅರವಿಂದ್ ಸಹಕಾರಿ ಬ್ಯಾಂಕ್
   Aryavart Bank:
   - ಆರ್ಯವರ್ತ್ ಬಂಕ್
   Assam Gramin Vikas Bank:
-  - ಅಸ್ಸಾಂ ಗ್ರಾಮೀಣ್ ವಿಕಾಸ್ ಬಂಕ್
-  - ಅಸ್ಸಾಂ ವಿಕಾಸ್ ಬಂಕ್
-  - ಅಸ್ಸಾಂ ಗ್ರಾಮೀಣ್ ಬಂಕ್
+  - ಅಸ್ಸಾಂ ಗ್ರಾಮೀಣ್ ವಿಕಾಸ್ ಬ್ಯಾಂಕ್
+  - ಅಸ್ಸಾಂ ವಿಕಾಸ ಬ್ಯಾಂಕ್
+  - ಅಸಾಮ ಗ್ರಾಮೀಣ ವಿಕಾಸ ಬ್ಯಾಂಕು
   Associate Co-operative Bank Limited-Surat:
-  - ಅಸೋಸಿಯೇಟ್ ಕೋಆಪರೇಟಿವ್ ಬಂಕ್ ಲಿಮಿಟೆಡ್ ಸೂರತ್
-  - ಅಸೋಸಿಯೇಟ್ ಕೋಆಪರೇಟಿವ್ ಬಂಕ್ ಸೂರತ್
-  - ಅಸೋಸಿಯೇಟ್ ಕೋಆಪರೇಟಿವ್ ಬಂಕ್ ಲಿಮಿಟೆಡ್
-  - ಅಸೋಸಿಯೇಟ್ ಕೋಆಪರೇಟಿವ್ ಬಂಕ್
+  - ಅಸೋಸಿಯೇಟ್ ಕೋಆಪರೇಟಿವ್ ಬ್ಯಾಂಕ್ ಲಿಮಿಟೆಡ್ ಸೂರತ್
+  - ಅಶೋಶಿಯೇಟ್ ಕೋವಾಪರೇಟಿವ್ ಬ್ಯಾಂಕ್ ಸೂರತ್ತು
+  - ಅಸೋಸಿಯೇಟ್ ಕೋಪರೇಟಿವ್ ಬ್ಯಾಂಕ್ ಲಿಮಿಟೆಡ್ಡು
+  - ಅಸೋಸಿಯೇಟ್ ಕೋಆಪರೇಟಿವ್ ಬ್ಯಾಂಕು
   Axis Bank:
-  - ಆಕ್ಸಿಸ್ ಬಂಕ್
-  - ಆಕ್ಸಿಸ್
-  - ಆಕ್ಸೆಸ್ ಬಂಕ್
+  - ಆಕ್ಸಿಸ್ ಬ್ಯಾಂಕು
+  - ಯಾಕ್ಸಿಸ್
+  - ಯಾಕ್ಸಿಸ್ ಬ್ಯಾಂಕು
   - ಎಕ್ಸಿಸ್ ಬ್ಯಾಂಕ್
   - ಎಕ್ಸಿಸ್ ಬ್ಯಾಂಕ್ನಲ್ಲಿ
   BALOTRA URBAN CO-OPERATIVE BANK LTD:
-  - ಬಲೋತ್ರಾ ಅರ್ಬನ್ ಕೋಆಪರೇಟಿವ್ ಬಂಕ್ ಲಿಮಿಟೆಡ್
-  - ಬಲೋತ್ರಾ ಅರ್ಬನ್ ಕೋಆಪರೇಟಿವ್ ಬಂಕ್
-  - ಬಲೋತ್ರಾ ಅರ್ಬನ್ ಕೋಆಪರೇಟಿವ್
-  - ಬಲೋತ್ರಾ ಅರ್ಬನ್ ಬಂಕ್
+  - ಬಾಲೋತ್ರಾ ಅರ್ಬನ್ ಕೋಆಪರೇಟಿವ್ ಬ್ಯಾಂಕ್ ಲಿಮಿಟೆಡ್
+  - ಬಲೋತ್ರಾ ಅರ್ಬನ್ ಕೋವಾಪರೇಟಿವ್ ಬ್ಯಾಂಕು
+  - ಬಲೂತ್ರ ಅರ್ಬನ್ ಕೋಆಪರೇಟಿವ್
+  - ಬಲೋತ್ರಾ ಅರ್ಬನ್ ಬ್ಯಾಂಕು
   Bajaj Finance Limited:
   - ಬಜಾಜ್ ಫೈನಾನ್ಸ್ ಲಿಮಿಟೆಡ್
   Balasinor Nagarik Sahakari Bank Ltd:
   - ಬಾಲಸಿನೋರ್ ನಾಗರಿಕ್ ಸಹಕಾರಿ ಬಂಕ್ ಎಲ್ಟಿಡಿ
   Bandhan Bank:
-  - ಬಂಧನ್ ಬಂಕ್
-  - ಬಂಧನ್
+  - ಬಂಧನ್ ಬ್ಯಾಂಕ್
+  - ‌ಬಂದನ್
   Bank of America NA:
-  - ಬಿ ಒ ಫ್ ಆ
-  - ಬಂಕ್ ಒಎಫ್ ಅಮೆರಿಕಾ ನ್ ಆ
-  - ಬಂಕ್ ಒಎಫ್ ಅಮೆರಿಕಾ
+  - ಬಿ ಒ ಫ್ ಏ
+  - ಬ್ಯಾಂಕ್‌ ಆಫ್‌ ಅಮೇರಿಕಾ ಎನ್‌ ಏ
+  - ಬ್ಯಾಂಕ್‌ ಆಪ್ ಅಮೇರಿಕಾ
   Bank of Baroda:
-  - ಬಂಕ್ ಒಎಫ್ ಬರೋಡಾ
+  - ಬ್ಯಾಂಕ್ ಆಫ್ ಬರೋಡಾ
   - ಬ್ಯಾಂಕ್ ಆಫ್ ಬರೋಡಾ
   - ಬ್ಯಾಂಕ್ ಆಫ್ ಬಡೋದಾ
-  - ಬ್ಯಾಂಕ್ ಆಫ್ ಬರೋದಾ 
+  - ಬ್ಯಾಂಕ್ ಆಫ್ ಬರೋದಾ
+  - ಬಿ ಓ ಬಿ
   Bank of India:
-  - ಬಂಕ್ ಒಎಫ್ ಇಂಡಿಯಾ
   - ಬ್ಯಾಂಕ್ ಆಫ್ ಇಂಡಿಯಾ
-  - ಬೋಯಿ
+  - ಬ್ಯಾಂಕ್ ಆಫ್ ಇಂಡಿಯಾ
+  - ಬಿ ಓ ಐ
   Bank of Maharashtra:
-  - ಬಂಕ್ ಒಎಫ್ ಮಹಾರಾಷ್ಟ್ರ
+  - ಬ್ಯಾಂಕ್ ಆಫ್ ಮಹಾರಾಷ್ಟ್ರಾ
   - ಬ್ಯಾಂಕ್ ಆಫ್ ಮಹಾರಾಷ್ಟ್ರ
   - ಮಹಾರಾಷ್ಟ್ರ ಬ್ಯಾಂಕ್
+  - ಬಿ ಓ ಎಂ
   Baran Nagrik Sahkari Bank Ltd:
-  - ಬರಾನ್ ನಾಗ್ರಿಕ್ ಸಹಕಾರಿ ಬಂಕ್ ಲಿಮಿಟೆಡ್
+  - ಬರಾನ್ ನಾಗರಿಕ್ ಸಹಕಾರಿ ಬ್ಯಾಂಕ್ ಲಿಮಿಟೆಡ್
   Baroda Gujarat Gramin Bank:
-  - ಬರೋಡಾ ಗುಜರಾತ್ ಗ್ರಾಮೀಣ್ ಬಂಕ್
-  - ಬರೋಡಾ ಗುಜರಾತ್ ಬಂಕ್
-  - ಬರೋಡಾ ಗ್ರಾಮೀಣ್ ಬಂಕ್
+  - ಬರೋಡಾ ಗುಜರಾತ್ ಗ್ರಾಮೀಣ್ ಬ್ಯಾಂಕ್
+  - ಬರೋಡಾ ಗುಜ್ರಾತ್ ಗ್ರಾಮೀಣ ಬ್ಯಾಂಕು
+  - ಬರೋಡಾ ಗ್ರಾಮೀಣ ಬೇಂಕು
   Baroda Rajasthan Kshetriya Gramin Bank:
-  - ಬರೋಡಾ ರಾಜಸ್ಥಾನ ಕ್ಷೇತ್ರೀಯ ಗ್ರಾಮೀಣ್ ಬಂಕ್
-  - ಬರೋಡಾ ರಾಜಸ್ಥಾನ ಗ್ರಾಮೀಣ್ ಬಂಕ್
-  - ಬರೋಡಾ ರಾಜಸ್ಥಾನ ಕ್ಷೇತ್ರೀಯ ಬಂಕ್
+  - ಬರೋಡಾ ರಾಜಸ್ಥಾನ್ ಕ್ಷೇತ್ರೀಯ ಗ್ರಾಮೀಣ್ ಬ್ಯಾಂಕ್
+  - ಬರೋಡಾ ರಾಜಾಸ್ಥಾನ ಗ್ರಾಮೀಣ ಬ್ಯಾಂಕು
+  - ಬರೋಡ ರಾಜಸ್ಥಾನ ಕ್ಷೇತ್ರೀಯ ಬಾಂಕು
   Baroda Uttar Pradesh Gramin bank:
-  - ಬರೋಡಾ ಉತ್ತರ್ ಪ್ರದೇಶ ಗ್ರಾಮೀಣ್ ಬಂಕ್
-  - ಬರೋಡಾ ಅಪ್ ಗ್ರಾಮೀಣ್ ಬಂಕ್
+  - ಬರೋಡಾ ಉತ್ತರ್ ಪ್ರದೇಶ್ ಗ್ರಾಮೀಣ್ ಬ್ಯಾಂಕ್
+  - ಬರೋಡಾ ಯು ಪಿ ಗ್ರಾಮೀಣ್ ಬೇಂಕ್
   Bassein Catholic Co operative Bank:
-  - ಬಸ್ಸೇನ್ ಕ್ಯಾಥೋಲಿಕ್ ಕೋಆಪರೇಟಿವ್ ಬಂಕ್
-  - ಬಸ್ಸೇನ್ ಕ್ಯಾಥೋಲಿಕ್ ಕೋಆಪರೇಟಿವ್
-  - ಬಸ್ಸೇನ್ ಕೋಆಪರೇಟಿವ್
+  - ಬ್ಯಾಸ್ಸೇನ್ ಕ್ಯಾಥೋಲಿಕ್ ಕೋಆಪರೇಟಿವ್ ಬ್ಯಾಂಕ್
+  - ಬ್ಯಾಸೀನ್ ಕಾಥೊಲಿಕ್ ಕೋವಾಪರೇಟಿವ್ ಬಾಂಕ್
+  - ಬಾಸ್ಸೇನ್ ಕೋಆಪರೇಟಿವ್
   Bhadradri Co-operative Urban Bank:
-  - ಭದ್ರಾದ್ರಿ ಕೋಆಪರೇಟಿವ್ ಅರ್ಬನ್ ಬಂಕ್
-  - ಭದ್ರಾದ್ರಿ ಕೋಆಪರೇಟಿವ್ ಬಂಕ್
-  - ಭದ್ರಾದ್ರಿ ಅರ್ಬನ್ ಬಂಕ್
+  - ಭದ್ರಾದ್ರಿ ಕೋಆಪರೇಟಿವ್ ಅರ್ಬನ್ ಬ್ಯಾಂಕ್
+  - ಬದ್ರಾದ್ರಿ ಕೋವಾಪರೇಟಿವ್ ಬ್ಯಾಂಕ್
+  - ಭದ್ರಾದ್ರೀ ಅರ್ಬನ್ ಬ್ಯಾಂಕ್
   Bhagini Nivedita Sahakari Bank Ltd, Pune:
-  - ಭಗಿನಿ ನಿವೇದಿತಾ ಸಹಕಾರಿ ಬಂಕ್ ಲಿಮಿಟೆಡ್ ಪುಣೆ
-  - ಭಗಿನಿ ನಿವೇದಿತಾ ಸಹಕಾರಿ ಬಂಕ್ ಲಿಮಿಟೆಡ್
-  - ಭಗಿನಿ ನಿವೇದಿತಾ ಸಹಕಾರಿ ಬಂಕ್
-  - ಭಗಿನಿ ನಿವೇದಿತಾ ಬಂಕ್
+  - ಭಗಿನೀ ನಿವೇದಿತಾ ಸಹಕಾರಿ ಬ್ಯಾಂಕ್ ಲಿಮಿಟೆಡ್ ಪೂಣೆ
+  - ಭಗಿನೀ ನಿವೇದಿತಾ ಸಾಕಾರಿ ಬ್ಯಾಂಕ್ ಲಿಮಿಟೆಡ್
+  - ಭಗಿನೀ ನಿವೇದಿತಾ ಸಅಕಾರಿ ಬ್ಯಾಂಕು
+  - ಭಗಿನಿ ನಿವೇದಿತಾ ಬಾಂಕು
   Bharat Co-op Bank(mumbai):
-  - ಭಾರತ್ ಕೋಆಪರೇಟಿವ್ ಬಂಕ್ ಮುಂಬೈ
-  - ಭಾರತ್ ಕೋಆಪರೇಟಿವ್ ಬಂಕ್
+  - ಭಾರತ್ ಕೋಆಪರೇಟಿವ್ ಬ್ಯಾಂಕ್ ಮುಂಬೈ
+  - ಬಾರತ್ ಕೋವಾಪರೇಟಿವ್ ಬ್ಯಾಂಕು
   Bharuch District Central Co-operative Bank Ltd:
   - ಭರುಚ್ ಡಿಸ್ಟ್ರಿಕ್ಟ್ ಸೆಂಟ್ರಲ್ ಸಿಒ-ಆಪರೇಟಿವ್ ಬಂಕ್ ಎಲ್ಟಿಡಿ
   Bhavnagar District Co Op Bank Ltd:
-  - ಭಾವನಗರ ಡಿಸ್ಟ್ರಿಕ್ಟ್ ಕೋಆಪರೇಟಿವ್ ಬಂಕ್ ಲಿಮಿಟೆಡ್
-  - ಭಾವನಗರ ಡಿಸ್ಟ್ರಿಕ್ಟ್ ಕೋಆಪರೇಟಿವ್ ಬಂಕ್
-  - ಭಾವನಗರ ಡಿಸ್ಟ್ರಿಕ್ಟ್ ಬಂಕ್
+  - ಭಾವನಗರ ಡಿಸ್ಟ್ರಿಕ್ಟ್ ಕೋಆಪರೇಟಿವ್ ಬ್ಯಾಂಕ್ ಲಿಮಿಟೆಡ್
+  - ಭಾವ್ನಗರ ಡಿಸ್ಟ್ರಿಕ್ಟ್ ಕೋವಾಪರೇಟಿವ್ ಬ್ಯಾಂಕ್
+  - ಭಾವ್ನಗ್ರ ಡಿಸ್ಟ್ರಿಕ್ಟ್ ಕೋಪರೇಟಿವ್ ಬ್ಯಂಕು
   Bhilwara Urban Co-operative Bank Ltd:
-  - ಭಿಲ್ವಾರ ಅರ್ಬನ್ ಕೋಆಪರೇಟಿವ್ ಬಂಕ್ ಲಿಮಿಟೆಡ್
-  - ಭಿಲ್ವಾರ ಅರ್ಬನ್ ಕೋಆಪರೇಟಿವ್ ಬಂಕ್
-  - ಭಿಲ್ವಾರ ಕೋಆಪರೇಟಿವ್ ಬಂಕ್
-  - ಭಿಲ್ವಾರ ಅರ್ಬನ್ ಬಂಕ್
+  - ಭಿಲ್ವಾರಾ ಅರ್ಬನ್ ಕೋಆಪರೇಟಿವ್ ಬ್ಯಾಂಕ್ ಲಿಮಿಟೆಡ್
+  - ಬಿಲ್ವಾರಾ ಅರ್ಬನ್ ಕೋಆಪರೇಟಿವ್ ಬ್ಯಾಂಕ್
+  - ಭಿಲ್ವಾರಾ ಕೋವಾಪರೇಟಿವ್ ಬ್ಯಾಂಕ್
+  - ಭಿಲ್ವಾರಾ ಅರ್ಬನ್ ಬಾಂಕ್
   Bicholim Urban Cooperative Bank:
-  - ಬಿಚೋಲಿಮ್ ಅರ್ಬನ್ ಕೋಆಪರೇಟಿವ್ ಬಂಕ್
-  - ಬಿಚೋಲಿಮ್ ಕೋಆಪರೇಟಿವ್ ಬಂಕ್
-  - ಬಿಚೋಲಿಮ್ ಅರ್ಬನ್ ಬಂಕ್
+  - ಬಿಚೋಲಿಮ್ ಅರ್ಬನ್ ಕೋಆಪರೇಟಿವ್ ಬ್ಯಾಂಕ್
+  - ಬಿಚೋಲಿಮ್ ಕೋವಾಪರೇಟಿವ್ ಬ್ಯಾಂಕ್
+  - ಬಿಚ್ಚೋಲಿಮ್ ಅರ್ಬನ್ ಬ್ಯಾಂಕು
   Bombay Mercantile Co-Op Bank Ltd:
-  - ಬಾಂಬೆ ಮರ್ಕೆಂಟೈಲ್ ಕೋಆಪರೇಟಿವ್ ಬಂಕ್ ಲಿಮಿಟೆಡ್
-  - ಬಾಂಬೆ ಮರ್ಕೆಂಟೈಲ್ ಕೋಆಪರೇಟಿವ್ ಬಂಕ್
-  - ಬಾಂಬೆ ಮರ್ಕೆಂಟೈಲ್ ಬಂಕ್
+  - ಬಾಂಬೆ ಮರ್ಕೆಂಟೈಲ್ ಕೋಆಪರೇಟಿವ್ ಬ್ಯಾಂಕ್ ಲಿಮಿಟೆಡ್
+  - ಬೊಂಬೈ ಮರ್ಕಂಟೈಲ್ ಕೋಆಪರೇಟಿವ್ ಬ್ಯಾಂಕ್ ಲಿಮಿಟೆಡ್
+  - ಬಾಂಬೇ ಮರ್ಕೆಂಟೈಲ್ ಬ್ಯಾಂಕು
   CITI Retail:
   - ಸಿಟಿ ರಿಟೇಲ್ ಬಂಕ್
   - ಸಿಟಿ ರಿಟೇಲ್
   - ಸಿಟಿ ಬಂಕ್
   Canara Bank:
-  - ಕೆನಾರಾ ಬಂಕ್
+  - ಕೆನಾರಾ ಬ್ಯಾಂಕು
   - ಕೆನರಾ ಬ್ಯಾಂಕ್
   - ಕ್ಯಾನರಾ ಬ್ಯಾಂಕ್
   Capital Small Finance Bank:
@@ -357,8 +395,6 @@ bank_name:
   - ಎಸ್ಎಎಫ್ ಸ್ಮಾಲ್ ಬಂಕ್
   - ಎಸ್ಎಎಫ್ ಬಂಕ್
   - ಎಸ್ಎಎಫ್
-  Entity_Value:
-  - Kannada
   Equitas small finance bank:
   - ಇಕ್ವಿಟಾಸ್ ಸ್ಮಾಲ್ ಫೈನಾನ್ಸ್ ಬಂಕ್
   - ಇಕ್ವಿಟಾಸ್ ಸ್ಮಾಲ್ ಬಂಕ್
