--- a/entity/data/variations/variations-or.yaml
+++ b/entity/data/variations/variations-or.yaml
@@ -178,6 +178,8 @@ bank_name:
   - ଏସିସ ବ୍ୟାଙ୍କ
   - ଆକ୍ସିସ୍ ବ୍ୟାଙ୍କ
   - ଆକ୍ସିସ୍ ବ୍ୟାଙ୍କ
+  - ଆକ୍ସିସ୍ ବ୍ୟାଙ୍କ
+  - ଆକ୍ସିସ୍ ବ୍ୟାଙ୍କ
   BALOTRA URBAN CO-OPERATIVE BANK LTD:
   - ବାଲୋତ୍ରା ଅର୍ବାନ କୋଅପରେଟିଭ୍ ବ୍ୟାଙ୍କ ଲିମିଟେଡ୍
   - ବାଲୋତ୍ରା ଅର୍ବାନ କୋଅପରେଟିଭ୍ ବେଙ୍କ ଲିମିଟେଡ୍
@@ -230,6 +232,8 @@ bank_name:
   - ବ୍ୟାଙ୍କ ଅଫ୍ ବରୁଡାର
   - ବ୍ୟାଙ୍କ ଓଫ ବରୋଡା
   - ବ୍ୟାଙ୍କ ଅଫ୍ ବରୋଦାରେ
+  - ବ୍ୟାଙ୍କ ଓଫ ବରୋଡା
+  - ବ୍ୟାଙ୍କ ଅଫ୍ ବରୋଦାରେ
   Bank of India:
   - ବ୍ୟାଙ୍କ ଅଫ୍ ଇଣ୍ଡିଆ
   - ବ୍ୟାଙ୍କ ଅଫ୍ ଇଣ୍ଡିଆର
@@ -238,6 +242,7 @@ bank_name:
   - ବ୍ୟାଙ୍କ ଅଫ ଇଣ୍ଡିଆ
   - ବ୍ୟାଙ୍କ ଅପ୍ ଇଣ୍ଡିଆ
   - ବ୍ୟାଙ୍କ ଅପ୍ ଇଣ୍ଡିଆ
+  - ବ୍ୟାଙ୍କ ଅଫ୍ ଇଣ୍ଡିଆ
   Bank of Maharashtra:
   - ବ୍ୟାଙ୍କ ଅଫ୍ ମହାରାଷ୍ଟ୍ର
   - ବ୍ୟାଙ୍କ ଅଫ୍୍ ମହାରାଷ୍ଟ୍ର
@@ -611,6 +616,7 @@ bank_name:
   - ଏଚଡିଏଫ୍ସି ବ୍ୟାଙ୍କର
   - ଏଚଡିଏପସି ବ୍ୟାଙ୍କରୁ 
   - ଏଚଡିଏଫ୍ସି ବ୍ୟାଙ୍କରୁ
+  - ଏଚଡିଏଫ୍ସି ବ୍ୟାଙ୍କରୁ
   HSBC:
   - ଏଚଏସବିସି
   - ହଂକଂ ବ୍ୟାଙ୍କ
@@ -766,6 +772,7 @@ bank_name:
   - ଜାମ୍ମୁ ଏବଂ କାଶ୍ମୀର ବ୍ୟାଙ୍କ
   - ଜାମ୍ମୁ ଏବଂ କାଶ୍ମୀର ବେଙ୍କ
   - ଜମ୍ମୁ କଶ୍ମୀର ବ୍ୟାଙ୍କରେ
+  - ଜାମ୍ମୁ କଶ୍ମୀର ବ୍ୟାଙ୍କରେ
   - ଜାମ୍ମୁ କଶ୍ମୀର ବ୍ୟାଙ୍କରେ
   Jana Small Finance Bank:
   - ଜନ ସ୍ମଲ ଫାଇନାନ୍ସ ବ୍ୟାଙ୍କ
@@ -960,6 +967,7 @@ bank_name:
   - କୋଟକ ବ୍ୟାଙ୍କଠାରୁ
   - କୋଟକ ବ୍ୟାଙ୍କ୍ରେ
   - କୋଟକ ବ୍ୟାଙ୍କରେ
+  - କୋଟକ ମହିନ୍ଦ୍ରା ବ୍ୟାଙ୍କର
   - କୋଟକ ମହିନ୍ଦ୍ରା ବ୍ୟାଙ୍କର
   Kottakkal Co- Op Urban Bank Ltd:
   - କୋଟକ୍କଲ କୋଅପ ଅରବାନ ବ୍ୟାଙ୍କ ଏଲଟିଡି
@@ -3027,6 +3035,7 @@ bank_name:
   - ୟୁନିୟନ ବ୍ୟାଙ୍କରେ
   - ୟୁନିଅନ ବ୍ୟାଙ୍କ
   - ୟୁନିଅନ ବ୍ୟାଙ୍କର
+  - ୟୁନିଅନ ବ୍ୟାଙ୍କର
   Union Co-operative Bank Ltd.:
   - ୟୁନିଅନ କୋଅପରେଟିଭ ବ୍ୟାଙ୍କ ଏଲଟିଡି
   - ୟୁନିଅନ କୋଅପରେଟିଭ ବେଙ୍କ ଏଲଟିଡି
@@ -3190,6 +3199,7 @@ lpg_gas_provider_name:
   - ଭାରତ ଗ୍ୟାସର
   - ଭାରତ ଗ୍ୟାସx`
   - ଭାରତ ଗ୍ୟାସର।
+  - ଭାରତ ଗ୍ୟାସ
   Hindustan Petroleum Corporation Ltd.:
   - ହିନ୍ଦୁସ୍ତାନ ପେଟ୍ରୋଲିୟମ କର୍ପୋରେସନ ଲିମିଟେଡ୍
   - ହ୍ ପି ଜିଏଏସ
@@ -3203,6 +3213,9 @@ lpg_gas_provider_name:
   - ଇଣ୍ଡିଆନ ଅଏଲରୁ
   - ଇନ୍ଦାନେ
   - ଇଣ୍ଡିଆନ ଗ୍ୟାସର
+  - ଇଣ୍ଡିଆନ୍ ଇଣ୍ଡିଆନ୍ ଗ୍ୟାସର
+  - ଇଣ୍ଡିଆନ୍ ଗ୍ୟାସର
+  - ଇଣ୍ଡିଆନ୍ ଓଇଲ
   Jyothi Gas Pvt. Ltd:
   - ଜ୍ୟୋତି ଗ୍ୟାସ୍ ବ୍ୟକ୍ତିଗତ ସୀମିତ
   - ଜ୍ୟୋତି ଜିଏଏସ
@@ -3211,6 +3224,7 @@ telephone_operator:
   Airtel:
   - ଏୟାରଟେଲ
   - ଭାରତୀ ଏୟାରଟେଲ୍ |
+  - ଏୟାରଟେଲ୍ 
   BSNL:
   - ବିଏସଏନଏଲ
   - ବିଏସଏନ୍ଏଲ୍
