--- a/entity/data/patterns.yaml
+++ b/entity/data/patterns.yaml
@@ -55,8 +55,8 @@ amount_of_money:
   - రూపాయి *(\d\s?)+
   - (\d\s?)+ *రూపాయలు
   - రూపాయలు *(\d\s?)+
-  - (\d\s?)+ *రూపాయ లు
-  - రూపాయ లు *(\d\s?)+
+  - (\d\s?)+ *రూపాయ
+  - రూపాయ *(\d\s?)+
   - రుపల్ *(\d\s?)+
   - (\d\s?)+ *రుపల్
   - రూపల *(\d\s?)+
@@ -73,6 +73,8 @@ amount_of_money:
   - ರೂಪಾಯ *(\d\s?)+
   - (\d\s?)+ *ರೂಪಾಯ್ದು
   - ರೂಪಾಯ್ದು *(\d\s?)+
+  - (\d\s?)+ *ರುಪಾಯ್ದ್
+  - ರುಪಾಯ್ದ್ *(\d\s?)+
   - (\d\s?)+ *ಹಣ
   - ಹಣ *(\d\s?)+
   - (\d\s?)+ *രൂപ
@@ -89,6 +91,8 @@ amount_of_money:
   - (\d\s?)+ *টাকার
   - টাকার*(\d\s?)+
   - টাকা। *(\d\s?)+
+  - (\d\s?)+ *টাকা
+  - টাকা*(\d\s?)+
   - (\d\s?)+ *रुपया
   - रुपया *(\d\s?)+
   - (\d\s?)+ *रुपईने
@@ -107,8 +111,16 @@ amount_of_money:
   - ਰੁਪਏ *(\d\s?)+
   - (\d\s?)+ *ਰੁਪੀਜ਼
   - ਰੁਪੀਜ਼ *(\d\s?)+
+  - (\d\s?)+ *ਰੁਪਇਆ
+  - ਰੁਪਇਆ *(\d\s?)+
   - (\d\s?)+ *ਰੁਪੀਜ
   - ਰੁਪੀਜ *(\d\s?)+
+  - (\d\s?)+ *ਰੁਪਆਂ
+  - ਰੁਪਆਂ *(\d\s?)+
+  - (\d\s?)+ *ਰੁਪਇਆਂ
+  - ਰੁਪਇਆਂ *(\d\s?)+
+  - (\d\s?)+ *ਰੁਪਿਆਂ
+  - ਰੁਪਿਆਂ *(\d\s?)+
   - (\d\s?)+ *روپے
   - روپے *(\d\s?)+
   - ₹ *(\d\s?)+
